--- a/САЙТ NERDS/index.html
+++ b/САЙТ NERDS/index.html
@@ -124,7 +124,7 @@
                 <li class="projects-item"><a href="#"><img src="img/mishka-logo.png" width="173" height="84" alt="Логотип Mishka"></a></li>
               </ul>
           </section>
-          <section>
+          <section class="modal">
             <form class="fillform" action="https://echo.htmlacademy.ru" method="post">
               <button class="close-button" type="button" title="Закрыть">Закрыть</button>
                 <h2>Напишите нам</h2>
@@ -134,7 +134,7 @@
                   </p>
                   <p class="text-form">
                     <label  for="your-email">Ваш e-mail:</label>
-                      <input id="your-email" type="text" name="email" value="" placeholder="email@example.com">
+                      <input id="your-email" type="email" name="email" value="" placeholder="email@example.com">
                   </p>
                   <p class="comment-text">
                     <label class="comment-text" for="your-text">Текст письма:</label>
