Личный проект: завершаем вёрстку

--- a/САЙТ NERDS/catalog.html
+++ b/САЙТ NERDS/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Магазин шаблонов Nerds</title>
+    <title>nerds-catalog</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -63,13 +63,13 @@
                     <label class="filter-label filter-label-radio" for="filter-rubber-grid">Резиновая</label></li>
                 </ul>
               </fieldset>
-              <fieldset class="features">
                 <h2 class="visually-hidden">ОСОБЕННОСТИ:</h2>
-                  <legend>ОСОБЕННОСТИ:</legend>
+              <fieldset class="features">
+                   <legend>ОСОБЕННОСТИ:</legend>
                     <ul>
                       <li><input class="filter-check" type="checkbox" name="slider-feature" id="filter-slider-feature" checked>
                         <label class="filter-label filter-label-check" for="filter-slider-feature">Слайдер</label></li>
-                      <li><input class="filter-check"type="checkbox" name="block-feature" id="filter-block-feature">
+                      <li><input class="filter-check" type="checkbox" name="block-feature" id="filter-block-feature">
                         <label class="filter-label filter-label-check"  for="filter-block-feature">Блок преимуществ</label></li>
                       <li><input class="filter-check" type="checkbox" name="news-feature" id="filter-news-feature" checked>
                         <label class="filter-label filter-label-check"  for="filter-news-feature">Новости</label></li>
@@ -163,7 +163,7 @@
                   <h3>NERDS DISIGN STUDIO</h3>
                     <ul>
                       <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
-                      <li>тел. +7(812)275-75-75</li>
+                      <li><a href="tel:+78122757575">тел. +7(812)275-75-75</a></li>
                     </ul>
                     <button class="button button-red" type="button">Напишите нам</button>
               </div>
