--- a/САЙТ NERDS/index.html
+++ b/САЙТ NERDS/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>студия Nerds</title>
+    <title>Nerds</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -149,7 +149,7 @@
                   <h3>NERDS DISIGN STUDIO</h3>
                     <ul>
                       <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
-                      <li>тел. +7(812)275-75-75</li>
+                      <li><a href="tel:+78122757575">тел. +7(812)275-75-75</a></li>
                     </ul>
                       <button class="button button-red" type="button">Напишите нам</button>
               </div>
