--- a/catalog.html
+++ b/catalog.html
@@ -4,152 +4,190 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>студия Nerds</title>
+    <title>nerds-catalog</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html"><img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии Nerds"></a>
-       <ul class="site-navigation">
-        <li><a href="info.html">Студия</a></li>
-        <li><a href="clients.html">Клиенты</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-      </ul>
-      <ul class="basket">
-        <li><img src="img/basket-icon.svg" width="15" height="15" alt="Иконка корзины"><a   href="basket.html">Корзина</a></li>
-      </ul>
-    </nav>
-        <h1>Магазин готовых шаблонов</h1>
-  </header>
-  <main>
-    <section class="price">
-      <h2>СТОИМОСТЬ:</h2>
-        <ul>
-          <li><img src="img/slider.svg" width="368" height="204" alt="Слайдер"></li>
-          <li></li>
-        </ul>
-    </section>
-    <section class="sorting">
-      <h2>СОРТИРОВАТЬ:</h2>
-        <ul>
-          <li>ПО ЦЕНЕ</li>
-          <li>ПО ТИПУ</li>
-          <li>ПО НАЗВАНИЮ</li>
-        </ul>
-          <button class="arrow-down" type="button"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Кнопка вниз"/></button>
-          <button class="arrow-up" type="button"><img src="img/icon-up-dir.svg" width="11" height="10" alt="Кнопка вверх "/></button>
-      </section>
-      <section class="parameters">
-        <h2 hidden>СЕТКА:</h2>
-          <form method="get" action="https://echo.htmlacademy.ru">
-            <legend>СЕТКА:</legend>
-            <ul>
-              <li><input type="radio" name="adaptive-grid" id="filter-adaptive-grid" checked>
-                <label for="filter-adaptive-site">Адаптивная</label></li>
-              <li><input type="radio" name="fix-grid" id="filter-fix-grid">
-                <label for="filter-adaptive-site">Фиксированная</label></li>
-              <li><input type="radio" name="rubber-grid" id="filter-rubber-grid">
-                <label for="filter-adaptive-site">Резиновая</label></li>
-            <!--<img src="img/radio-on.svg" width="25" height="25" alt="radio-on"/>Адаптивная</li>
-            <li><img src="img/radio-off.svg" width="25" height="25" alt="radio-off"/>Фиксированная</li>
-            <li><img src="img/radio-off.svg" width="25" height="25" alt="radio-off"/>Резиновая</li>-->
+    <div class="container">
+      <div class="main-navigation-wrapper">
+        <div class="menu-logo">
+          <a class="main-header-logo" href="index.html"><img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии Nerds"></a>
+        </div>
+        <nav class="main-navigation">
+          <ul class="site-navigation">
+            <li class="nav-item"><a href="index.html">Студия</a></li>
+            <li class="nav-item"><a href="clients.html">Клиенты</a></li>
+            <li class="nav-item nav-item-active"><a href="catalog.html">Магазин</a></li>
+            <li class="nav-item"><a href="contacts.html">Контакты</a></li>
           </ul>
-        </form>
-            <h2 hidden>ОСОБЕННОСТИ:</h2>
-              <form method="get" action="https://echo.htmlacademy.ru">
-                <legend>ОСОБЕННОСТИ:</legend>
-          <ul>
-            <li><input type="checkbox" name="slider-feature" id="filter-slider-feature" checked>
-              <label for="filter-slider-feature">Слайдер</label></li>
-            <li><input type="checkbox" name="block-feature" id="filter-block-feature">
-              <label for="filter-block-feature">Блок преимуществ</label></li>
-            <li><input type="checkbox" name="news-feature" id="filter-news-feature" checked>
-              <label for="filter-news-feature">Новости</label></li>
-            <li><input type="checkbox" name="gallery-feature" id="filter-gallery-feature">
-              <label for="filter-gallery-feature">Галерея</label></li>
-            <li><input type="checkbox" name="basket-feature" id="filter-basket-feature">
-              <label for="filter-basket-feature">корзина</label></li>
-            <!--<img src="img/checkbox-on.svg" width="27" height="23" alt="checkbox-on"/>Слайдер</li>
-            <li><img src="img/checkbox-off.svg" width="23" height="23" alt="checkbox-off"/>Блок преимуществ</li>
-            <li><img src="img/checkbox-on.svg" width="27" height="23" alt="checkbox-on"/>Новости</li>
-            <li><img src="img/checkbox-off.svg" width="23" height="23" alt="checkbox-off"/>Галерея</li>
-            <li><img src="img/checkbox-off.svg" width="23" height="23" alt="checkbox-off"/>корзина</li>-->
-          </ul>
-        </form>
-            <button class="button-gray" type="button">Показать</button>
-        </section>
-        <section class="templates">
-          <h2 hidden>Шаблоны</h2>
-            <ul>
-              <li><img class="browser" src="img/browser.svg" width="360" height="40" alt="browser "/>
-                  <a href="catalog-item"><img src="img/img-sedona-jpg.png" width="360" height="576" alt="сайт SEDONA "/></a></li>
-              <li><img class="browser" src="img/browser.svg" width="360" height="40" alt="browser "/>
-                <a href="catalog-item"><img src="img/img-pink-jpg.png" width="360" height="576" alt="сайт PINK "/></a></li>
-              <li><img class="browser" src="img/browser.svg" width="360" height="40" alt="browser "/>
-                <a href="catalog-item"><img src="img/img-barbershop-jpg.png" width="360" height="576" alt="сайт BORODINSKI "/></a></li>
-              <li><img class="browser" src="img/browser.svg" width="360" height="40" alt="browser "/>
-                <a href="catalog-item"><img src="img/img-mishka-jpg.png" width="360" height="576" alt="сайт MISHKA "/></a></li>
-              <li><img class="browser" src="img/browser.svg" width="360" height="40" alt="browser "/>
-                <a href="catalog-item"><img src="img/img-aplus-jpg.png" width="360" height="576" alt="сайт УЧЕБА "/></a></li>
-              <li><img class="browser" src="img/browser.svg" width="360" height="40" alt="browser "/>
-                <a href="catalog-item"><img src="img/img-kvast-jpg.png" width="360" height="576" alt="сайт КВАСТ "/></a></li>
-            </ul>
-            <ul>
-              <li><a class="page-number">1</a></li>
-              <li><a class="page-number" href="#">2</a></li>
-              <li><a class="page-number" href="#">3</a></li>
-              <li><a class="next-page" href="#">Следующая</a></li>
-            </ul>
-        </section>
-        <section class="contacts">
-          <h2 hidden>Наши контакты</h2>
-            <h3>NERDS DISIGN STUDIO</h3>
-              <ul>
-                <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
-                <li>тел. +7(812)275-75-75</li>
-              </ul>
-                <button class="button" type="button">Напишите нам</button>
-        </section>
-        <section class="fillform">
-          <h2>Напишите нам</h2>
-          <form action="https://echo.htmlacademy.ru" method="post">
-            <p>
-              <label for="your-name">Ваше имя:</label>
-              <input id="your-name" type="text" name="name" value="" placeholder="Нёрд">
-            </p>
-            <p>
-              <label for="your-email">Ваш e-mail:</label>
-              <input id="your-email" type="text" name="email" value="" placeholder="email@example.com">
-            </p>
-            <p>
-              <label for="your-text">Текст письма:</label>
-              <textarea id="your-text" type="text" name="message" placeholder="В свободной форме" rows="5"></textarea>
-            </p>
-            <button class="button" type="submit">Отправить</button>
-            <button class="close-button" type="button"><img src="img/close-cross.svg" width="21" height="21" alt="Кнопка закрыть"></button>
-          </form>
-        </section>
-        <section>
-          <h2 hidden>Карта</h2>
-            <figure><a href="#"><img src="img/map-marker-png.png" width="231" height="190" alt="Маркер"></a><a href="#"><img src="img/map.png" width="1440" height="416" alt="Карта"></a></figure>
-        </section>
-    </main>
-    <footer>
-      <div>
-        <ul>
-          <li><a href='#'><img src="img/vk-icon.png" width="26" height="15" alt="Иконка ВК"></a></li>
-          <li><a href='#'><img src="img/fb-icon.png" width="12" height="22" alt="Иконка ВК"></a></li>
-          <li><a href='#'><img src="img/insta-icon.png" width="21" height="21" alt="Иконка ВК"></a></li>
-        </ul>
+        </nav>
+        <div class="menu-user">
+          <a class="menu-basket" href="#">Корзина</a>
+        </div>
       </div>
-      <div>
-        <h3>Давайте дружить, это выгодно!</h3><br>
-        <p>Скидка  10% для друзей из социальных сетей.</p>
+    </div>
+      <h1 class="catalog-title">Магазин готовых шаблонов</h1>
+  </header>
+  <main class="main">
+    <div class="catalog-container">
+        <div class="parameters">
+          <fieldset class="filter-item">
+            <legend>Стоимость:</legend>
+              <div class="range-filter">
+                <div class="range-controls">
+                  <div class="scale">
+                    <div class="bar" style="margin-left: 20%; width: 30%"></div>
+                  </div>
+                  <div class="toggle toggle-min"></div>
+                  <div class="toggle toggle-max"></div>
+                </div>
+                <div class="price-controls">
+                  <label class="min-price">от <input name="min-price" type="text" value="0"></label>
+                  <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+                </div>
+              </div>
+          </fieldset>
+        <h2 class="visually-hidden">СЕТКА:</h2>
+          <form  method="get" action="https://echo.htmlacademy.ru">
+            <fieldset class="grid">
+              <legend>СЕТКА:</legend>
+                <ul>
+                  <li><input class="filter-radio" type="radio" name="adaptive-grid" id="filter-adaptive-grid">
+                    <label class="filter-label filter-label-radio" for="filter-adaptive-grid">Адаптивная</label></li>
+                  <li><input class="filter-radio" type="radio" name="fix-grid" id="filter-fix-grid" checked>
+                    <label class="filter-label filter-label-radio" for="filter-fix-grid">Фиксированная</label></li>
+                  <li><input class="filter-radio" type="radio" name="rubber-grid" id="filter-rubber-grid">
+                    <label class="filter-label filter-label-radio" for="filter-rubber-grid">Резиновая</label></li>
+                </ul>
+              </fieldset>
+                <h2 class="visually-hidden">ОСОБЕННОСТИ:</h2>
+              <fieldset class="features">
+                   <legend>ОСОБЕННОСТИ:</legend>
+                    <ul>
+                      <li><input class="filter-check" type="checkbox" name="slider-feature" id="filter-slider-feature" checked>
+                        <label class="filter-label filter-label-check" for="filter-slider-feature">Слайдер</label></li>
+                      <li><input class="filter-check" type="checkbox" name="block-feature" id="filter-block-feature">
+                        <label class="filter-label filter-label-check"  for="filter-block-feature">Блок преимуществ</label></li>
+                      <li><input class="filter-check" type="checkbox" name="news-feature" id="filter-news-feature" checked>
+                        <label class="filter-label filter-label-check"  for="filter-news-feature">Новости</label></li>
+                      <li><input class="filter-check" type="checkbox" name="gallery-feature" id="filter-gallery-feature">
+                        <label class="filter-label filter-label-check"  for="filter-gallery-feature">Галерея</label></li>
+                      <li><input class="filter-check" type="checkbox" name="basket-feature" id="filter-basket-feature">
+                        <label class="filter-label filter-label-check"  for="filter-basket-feature">Корзина</label></li>
+                    </ul>
+              </fieldset>
+              </form>
+                <button class="button button-gray" type="button">Показать</button>
+        </div>
+        <div class="works">
+          <section class="sorting">
+            <h2>СОРТИРОВАТЬ:</h2>
+              <ul>
+                <li class="sort-item sort-item-active"><a href="#">ПО ЦЕНЕ</a></li>
+                <li class="sort-item"><a href="#">ПО ТИПУ</a></li>
+                <li class="sort-item"><a href="#">ПО НАЗВАНИЮ</a></li>
+              </ul>
+              <div class="arrows">
+                <button class="arrow arrow-down arrow-active" type="button"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Кнопка вниз"/></button>
+                <button class="arrow arrow-up" type="button"><img src="img/icon-up-dir.svg" width="11" height="10" alt="Кнопка вверх "/></button>
+              </div>
+            </section>
+            <section>
+              <h2 hidden>Шаблоны</h2>
+                <ul class="templates">
+                  <li class="catalog-item"><a href="#"><img class="template-image" src="img/img-sedona-jpg.png" width="360" height="576" alt="сайт SEDONA "/></a>
+                    <div class="catalog-item-hover">
+                      <h2 class="catalog-item-title">SEDONA</h2>
+                        <p class="catalog-discription">Информационный сайт<br>для туристов</p>
+                          <button class="button button-hover" type="button" >9 900 руб.</button></div></li>
+                  <li class="catalog-item"><a href="#"><img class="template-image" src="img/img-pink-jpg.png" width="360" height="576" alt="сайт PINK "/></a>
+                    <div class="catalog-item-hover">
+                      <h2 class="catalog-item-title">PINK APP</h2>
+                        <p class="catalog-discription">Продуктовый лендинг<br>приложения для iOS и Android</p>
+                          <button class="button button-hover" type="button" >9 900 руб.</button></div></li>
+                  <li class="catalog-item"><a href="#"><img class="template-image" src="img/img-barbershop-jpg.png" width="360" height="576" alt="сайт BORODINSKI "/></a>
+                    <div class="catalog-item-hover">
+                      <h2 class="catalog-item-title">BARBERSHOP</h2>
+                        <p class="catalog-discription">Сайт салона красоты.<br> для мужчин,да.</p>
+                          <button class="button button-hover" type="button" >9 900 руб.</button></div></li>
+                  <li class="catalog-item"><a href="#"><img class="template-image" src="img/img-mishka-jpg.png" width="360" height="576" alt="сайт MISHKA "/></a>
+                    <div class="catalog-item-hover">
+                      <h2 class="catalog-item-title">MISHKA</h2>
+                        <p class="catalog-discription">Интернет магазин<br> вязанных игрушек.</p>
+                          <button class="button button-hover" type="button" >9 900 руб.</button></div></li>
+                  <li class="catalog-item"><a href="#"><img class="template-image" src="img/img-aplus-jpg.png" width="360" height="576" alt="сайт УЧЕБА "/></a>
+                    <div class="catalog-item-hover">
+                      <h2 class="catalog-item-title">A PLUS</h2>
+                        <p class="catalog-discription">Лендинг курсов повышения<br>  квалификации.</p>
+                          <button class="button button-hover" type="button" >9 900 руб.</button></div></li>
+                  <li class="catalog-item"><a href="#"><img class="template-image" src="img/img-kvast-jpg.png" width="360" height="576" alt="сайт КВАСТ "/></a>
+                    <div class="catalog-item-hover">
+                      <h2 class="catalog-item-title">КВАСТ</h2>
+                        <p class="catalog-discription">Промо-сайт производителя<br>крафтового кваса</p>
+                          <button class="button button-hover" type="button" >9 900 руб.</button></div></li>
+                </ul>
+                <ul class="page-selector">
+                  <li class="page-number page-current "><a >1</a></li>
+                  <li class="page-number"><a  href="#">2</a></li>
+                  <li class="page-number"><a  href="#">3</a></li>
+                  <li class="next-page"><a  href="#">Следующая</a></li>
+                </ul>
+            </section>
+        </div>
+        </div>
+        <section class="modal">
+          <form class="fillform" action="https://echo.htmlacademy.ru" method="post">
+            <button class="close-button" type="button" title="Закрыть">Закрыть</button>
+              <h2>Напишите нам</h2>
+                <p class="text-form">
+                  <label  for="your-name">Ваше имя:</label>
+                    <input id="your-name" type="text" name="name" value="" placeholder="Нёрд">
+                </p>
+                <p class="text-form">
+                  <label  for="your-email">Ваш e-mail:</label>
+                    <input id="your-email" type="email" name="email" value="" placeholder="email@example.com">
+                </p>
+                <p class="comment-text">
+                  <label class="comment-text" for="your-text">Текст письма:</label>
+                    <textarea id="your-text" name="message" placeholder="В свободной форме" rows="5"></textarea>
+                </p>
+                  <button class="button button-form" type="submit">Отправить</button>
+            </form>
+          </section>
+          <section class="map">
+            <div class="contacts">
+              <h2 class="visually-hidden">Наши контакты</h2>
+                <h3>NERDS DISIGN STUDIO</h3>
+                  <ul>
+                    <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
+                    <li><a class="tel" href="tel:+78122757575">тел. +7(812)275-75-75</a></li>
+                  </ul>
+                    <a class="button button-red button-link" href="#">Напишите нам</a>
+              </div>
+                <h2 class="visually-hidden">Карта</h2>
+                  <figure class="marker">
+                    <a href="#"><img src="img/map-marker-png.png" width="231" height="190" alt="Маркер"></a>
+                  </figure>
+          </section>
+  </main>
+    <footer class="main-footer">
+      <div class="container">
+        <div class="footer-social">
+          <ul class="social-icons">
+            <li><a href='#'><img class="ikon vk-ikon" src="img/vk-icon.png" width="26" height="15" alt="Иконка ВК"></a></li>
+            <li><a href='#'><img class="ikon fb-ikon" src="img/fb-icon.png" width="12" height="22" alt="Иконка ВК"></a></li>
+            <li><a href='#'><img class="ikon insta-ikon" src="img/insta-icon.png" width="21" height="21" alt="Иконка ВК"></a></li>
+          </ul>
+        </div>
+        <div class="footer-discount">
+          <h3>Давайте дружить, это выгодно!</h3>
+            <p>Скидка  10% для друзей из социальных сетей.</p>
+        </div>
       </div>
     </footer>
+    <script src="js/script.js" ></script>
 </body>
 </html>
