Личный проект: оживляем интерактивные элементы

--- a/САЙТ NERDS/catalog.html
+++ b/САЙТ NERDS/catalog.html
@@ -138,34 +138,34 @@
             </section>
         </div>
         </div>
-          <section class="modal">
-            <form class="fillform" action="https://echo.htmlacademy.ru" method="post">
-              <button class="close-button" type="button" title="Закрыть">Закрыть</button>
-                <h2>Напишите нам</h2>
-                  <p class="text-form">
-                    <label  for="your-name">Ваше имя:</label>
-                      <input id="your-name" type="text" name="name" value="" placeholder="Нёрд">
-                  </p>
-                  <p class="text-form">
-                    <label  for="your-email">Ваш e-mail:</label>
-                      <input id="your-email" type="email" name="email" value="" placeholder="email@example.com">
-                  </p>
-                  <p class="comment-text">
-                    <label class="comment-text" for="your-text">Текст письма:</label>
-                      <textarea id="your-text" name="message" placeholder="В свободной форме" rows="5"></textarea>
-                  </p>
-                    <button class="button button-form" type="submit">Отправить</button>
-              </form>
-            </section>
+        <section class="modal">
+          <form class="fillform" action="https://echo.htmlacademy.ru" method="post">
+            <button class="close-button" type="button" title="Закрыть">Закрыть</button>
+              <h2>Напишите нам</h2>
+                <p class="text-form">
+                  <label  for="your-name">Ваше имя:</label>
+                    <input id="your-name" type="text" name="name" value="" placeholder="Нёрд">
+                </p>
+                <p class="text-form">
+                  <label  for="your-email">Ваш e-mail:</label>
+                    <input id="your-email" type="email" name="email" value="" placeholder="email@example.com">
+                </p>
+                <p class="comment-text">
+                  <label class="comment-text" for="your-text">Текст письма:</label>
+                    <textarea id="your-text" name="message" placeholder="В свободной форме" rows="5"></textarea>
+                </p>
+                  <button class="button button-form" type="submit">Отправить</button>
+            </form>
+          </section>
           <section class="map">
-              <div class="contacts">
-                <h2 class="visually-hidden">Наши контакты</h2>
-                  <h3>NERDS DISIGN STUDIO</h3>
-                    <ul>
-                      <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
-                      <li><a href="tel:+78122757575">тел. +7(812)275-75-75</a></li>
-                    </ul>
-                    <button class="button button-red" type="button">Напишите нам</button>
+            <div class="contacts">
+              <h2 class="visually-hidden">Наши контакты</h2>
+                <h3>NERDS DISIGN STUDIO</h3>
+                  <ul>
+                    <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
+                    <li><a class="tel" href="tel:+78122757575">тел. +7(812)275-75-75</a></li>
+                  </ul>
+                    <a class="button button-red button-link" href="#">Напишите нам</a>
               </div>
                 <h2 class="visually-hidden">Карта</h2>
                   <figure class="marker">
@@ -188,5 +188,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.js" ></script>
 </body>
 </html>
