--- a/САЙТ NERDS/index.html
+++ b/САЙТ NERDS/index.html
@@ -149,9 +149,9 @@
                   <h3>NERDS DISIGN STUDIO</h3>
                     <ul>
                       <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
-                      <li><a href="tel:+78122757575">тел. +7(812)275-75-75</a></li>
+                      <li><a class="tel" href="tel:+78122757575">тел. +7(812)275-75-75</a></li>
                     </ul>
-                      <button class="button button-red" type="button">Напишите нам</button>
+                      <a class="button button-red button-link" href="#">Напишите нам</a>
               </div>
                 <h2 class="visually-hidden">Карта</h2>
                   <figure class="marker">
@@ -174,5 +174,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.js" ></script>
 </body>
 </html>
