--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>nerds-catalog</title>
+    <title>Nerds-catalog</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -162,24 +162,25 @@
               <h2 class="visually-hidden">Наши контакты</h2>
                 <h3>NERDS DISIGN STUDIO</h3>
                   <ul>
-                    <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
+                    <li>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</li>
                     <li><a class="tel" href="tel:+78122757575">тел. +7(812)275-75-75</a></li>
                   </ul>
                     <a class="button button-red button-link" href="#">Напишите нам</a>
               </div>
                 <h2 class="visually-hidden">Карта</h2>
-                  <figure class="marker">
-                    <a href="#"><img src="img/map-marker-png.png" width="231" height="190" alt="Маркер"></a>
-                  </figure>
+                  <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1571122280881!5m2!1sru!2sru" width="1440" height="416" style="border:0;" allowfullscreen=""></iframe>
+                    <figure class="marker">
+                      <a href="#"><img src="img/map-marker-png.png" width="231" height="190" alt="Маркер"></a>
+                    </figure>
           </section>
   </main>
     <footer class="main-footer">
       <div class="container">
         <div class="footer-social">
           <ul class="social-icons">
-            <li><a href='#'><img class="ikon vk-ikon" src="img/vk-icon.png" width="26" height="15" alt="Иконка ВК"></a></li>
-            <li><a href='#'><img class="ikon fb-ikon" src="img/fb-icon.png" width="12" height="22" alt="Иконка ВК"></a></li>
-            <li><a href='#'><img class="ikon insta-ikon" src="img/insta-icon.png" width="21" height="21" alt="Иконка ВК"></a></li>
+            <li><a href='#'><img class="vk-ikon" src="img/vk-icon.png" width="26" height="15" alt="Иконка ВК" aria-label="Мы в Вконтакте"></a></li>
+            <li><a href='#'><img class="fb-ikon" src="img/fb-icon.png" width="12" height="22" alt="Иконка ФБ" aria-label="Мы в Фейсбук"></a></li>
+            <li><a href='#'><img class="insta-ikon" src="img/insta-icon.png" width="21" height="21" alt="Иконка Инстаграм" aria-label="Мы в Инстаграм"></a></li>
           </ul>
         </div>
         <div class="footer-discount">
