--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li class="product-item product-item-1">
             <img src="img/advantage-picture-red.png" width="300" height="146" alt="Веб-сайты">
               <h2>ВЕБ-САЙТЫ</h2>
-                <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+                <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
                   <button class="button button-red" type="button">Заказать</button>
           </li>
           <li class="product-item product-item-2">
@@ -80,7 +80,7 @@
             <li class="product-item product-item-3">
               <img src="img/advantage-picture-yellow.png" width="300" height="146" alt="Презентации">
                 <h2>ПРЕЗЕНТАЦИИ</h2>
-                  <p>Вы даже не подозреваете на сколько вы изумительны!</p>
+                  <p>Вы даже не подозреваете, насколько вы изумительны!</p>
                     <button class="button button-yellow" type="button">Заказать</button>
             </li>
         </ul>
@@ -148,24 +148,25 @@
                 <h2 class="visually-hidden">Наши контакты</h2>
                   <h3>NERDS DISIGN STUDIO</h3>
                     <ul>
-                      <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
+                      <li>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</li>
                       <li><a class="tel" href="tel:+78122757575">тел. +7(812)275-75-75</a></li>
                     </ul>
                       <a class="button button-red button-link" href="#">Напишите нам</a>
               </div>
                 <h2 class="visually-hidden">Карта</h2>
-                  <figure class="marker">
-                    <a href="#"><img src="img/map-marker-png.png" width="231" height="190" alt="Маркер"></a>
-                  </figure>
+                  <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1571122280881!5m2!1sru!2sru" width="1440" height="416" style="border:0;" allowfullscreen=""></iframe>
+                    <figure class="marker">
+                      <a href="#"><img src="img/map-marker-png.png" width="231" height="190" alt="Маркер"></a>
+                    </figure>
               </section>
   </main>
     <footer class="main-footer">
       <div class="container">
         <div class="footer-social">
           <ul class="social-icons">
-            <li><a href='#'><img class="vk-ikon" src="img/vk-icon.png" width="26" height="15" alt="Иконка ВК"></a></li>
-            <li><a href='#'><img class="fb-ikon" src="img/fb-icon.png" width="12" height="22" alt="Иконка ВК"></a></li>
-            <li><a href='#'><img class="insta-ikon" src="img/insta-icon.png" width="21" height="21" alt="Иконка ВК"></a></li>
+            <li><a href='#'><img class="vk-ikon" src="img/vk-icon.png" width="26" height="15" alt="Иконка ВК" aria-label="Мы в Вконтакте"></a></li>
+            <li><a href='#'><img class="fb-ikon" src="img/fb-icon.png" width="12" height="22" alt="Иконка ФБ" aria-label="Мы в Фейсбук"></a></li>
+            <li><a href='#'><img class="insta-ikon" src="img/insta-icon.png" width="21" height="21" alt="Иконка Инстаграм" aria-label="Мы в Инстаграм"></a></li>
           </ul>
         </div>
         <div class="footer-discount">
